Update 'fg3y7pm57-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-5e50ea4d7e.8t7u.p3.openshiftapps.com/rhtap/rhtap-qe-python:829a247f6358cfab8fdd870415808822a83abc14@sha256:2f1b8822aa5817c26ffce05b20234c6bc7dff8144724422b5fd3b33779068bcc

--- a/components/fg3y7pm57-python/overlays/development/deployment-patch.yaml
+++ b/components/fg3y7pm57-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fg3y7pm57-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-5e50ea4d7e.8t7u.p3.openshiftapps.com/rhtap/rhtap-qe-python:829a247f6358cfab8fdd870415808822a83abc14@sha256:2f1b8822aa5817c26ffce05b20234c6bc7dff8144724422b5fd3b33779068bcc
+          name: container-image
